--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "TapIntoIt",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "3.5",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
+    "mapbox-gl": "^0.53.1",
     "popper.js": "^1.14.7"
   },
   "devDependencies": {
