--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.53.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "siema": "^1.5.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
