--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.3.1",
+    "chartkick": "^3.0.2",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.53.1",
     "popper.js": "^1.14.7"
